--- a/MP_v1.0/manifest.json
+++ b/MP_v1.0/manifest.json
@@ -57,7 +57,8 @@
         "usingComponents" : true
     },
     "mp-alipay" : {
-        "usingComponents" : true
+        "usingComponents" : true,
+        "appid" : "2021005100653359"
     },
     "mp-baidu" : {
         "usingComponents" : true
